--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.project.ddw</groupId>
 	<artifactId>spring-tg-bot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>SpringTGBot</name>
 	<description>TG bot on Spring Boot</description>
 	<properties>
